package com.ufc.jornal.domain.enums

enum class EducationLevel {
    ELEMENTARY,
    HIGH,
    UNDERGRADUATE,
}