package com.ufc.jornal.domain.enums

enum class UserRole {
    STUDENT,
    TEACHER,
    ADMIN
}